# Glasgow-MicroStream-ESP32-Flat-Building-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-commands.txt  clean  compile  sdkconfig
main/: component.mk  main.cpp
main/include/: DoublePollable.hpp  Fetch_BME280.hpp  FlatDetails.hpp  PrintSinks.hpp  Serialization.hpp  WifiCredentials.h
